# GravitySimulator

./: .gitignore  CMakeLists.txt  README.md
shaders/: planet.frag  planet.vert  trail.frag
src/: main.cpp
src/controller/: App.cpp  App.h
src/model/: Body.h  Camera.cpp  Camera.h  Simulation.cpp  Simulation.h  SphereGeometry.cpp  SphereGeometry.h
src/view/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  Trail.cpp  Trail.h  Window.cpp  Window.h
